test/errors/distinct_base_mismatch.haste
const MyInt = distinct int;
const x: MyInt = 5;
const y: int = 10;
const z = x + y;
